# jira-cli

./: Cargo.toml  README.md
src/: main.rs
