[package]
name = "cli-jira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features=["derive"] }
reqwest = { version = "0.11.23", features=["blocking"] }
serde = { version = "1.0.195", features=["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
